# stt-wav2vec2-librispeech

./: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  leap_mapping_onnx.yaml  pyproject.toml
librispeech_clean/: asr_config.yml  metrics.py  utils.py  visualizers.py
model/: wav2vec.h5
