[tool.poetry]
name = "librispeech-clean"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"
packages = [{include = "librispeech_clean"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
code-loader = "^1.0.79"
code-loader-helpers = "^1.0.20"
librosa = "^0.11.0"
textstat = "^0.7.5"
textblob = "^0.17.1"
google-cloud-storage = "^3.1.0"
jiwer = "^3.1.0"
transformers = "^4.32.1"
onnx2kerastl = "^0.0.164"
pandas = "2.0.3"
onnxruntime = "1.19.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"
